--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
                 <img class='mobile-menu-icon' src="icons/icon_list_m.png" alt="triple line in column" onclick="menuToggle();">
             </section>
         </header>
-
             <ul class="mobile-menu">
                 <li class='mobile-menu__tab'>
                     <a class='link' href='#'>События</a>
@@ -53,96 +52,98 @@
                     <a class='link' href='#'>Сценарии</a>
                 </li>
             </ul>
-        <main id='events'>
-            <div class='header'>Лента Событий</div>
-            <div class='feed'>
-                <template id="tmpl">
-                    <div class="card">
-                        <img src="icons/cross.svg" alt="cross" class="card__cross" onclick="this.parentElement.remove()">
-                        <div class='card__header'>
-                            <img class='card__icon' src="" alt="">
-                            <div class="card__title"></div>
-                            <div class="card__source"></div>
-                            <div class="card__time"></div>
-                        </div>
-                        <div class="card__description">
-                            <div class="card__additions">
-                                <div class="additions__top"></div>
-                                <img class='additions__image' touch-action="none" alt="">
-                                <div class="additions__temperature"></div>
-                                <div class="additions__humidity"></div>
+        <main>
+            <div id='events'>
+                <div class='header'>Лента Событий</div>
+                <div class='feed'>
+                    <template id="tmpl">
+                        <div class="card">
+                            <img src="icons/cross.svg" alt="cross" class="card__cross" onclick="this.parentElement.remove()">
+                            <div class='card__header'>
+                                <img class='card__icon' src="" alt="">
+                                <div class="card__title"></div>
+                                <div class="card__source"></div>
+                                <div class="card__time"></div>
                             </div>
-                        </div>
-                        <img src="icons/next-black.svg" alt="next" class="card__next">
-                    </div>
-                </template>
-                <template id="pl">
-                    <div class="player">
-                        <div class="player__header">
-                            <img class="player__icon" src="" alt="album">
-                            <div class="player__song">
-                                <div class="song__name"></div>
-                                <div class="song__control">
-                                    <input type="range" min="0" class="control__slider">
-                                    <span class="control__time"></span>
+                            <div class="card__description">
+                                <div class="card__additions">
+                                    <div class="additions__top"></div>
+                                    <img class='additions__image' touch-action="none" alt="">
+                                    <div class="additions__temperature"></div>
+                                    <div class="additions__humidity"></div>
                                 </div>
+                            </div>
+                            <img src="icons/next-black.svg" alt="next" class="card__next">
+                        </div>
+                    </template>
+                    <template id="pl">
+                        <div class="player">
+                            <div class="player__header">
+                                <img class="player__icon" src="" alt="album">
+                                <div class="player__song">
+                                    <div class="song__name"></div>
+                                    <div class="song__control">
+                                        <input type="range" min="0" class="control__slider">
+                                        <span class="control__time"></span>
+                                    </div>
 
+                                </div>
+                            </div>
+                            <div class="player__controls">
+                                <img class='controls__prev' src="icons/Prev.svg" alt="Prev">
+                                <img class='controls__next' src="icons/Next.svg" alt="Next">
+                                <input type="range" min="0" max="100" class="controls__slider">
+                                <span class="controls__volume"></span>
                             </div>
                         </div>
-                        <div class="player__controls">
-                            <img class='controls__prev' src="icons/Prev.svg" alt="Prev">
-                            <img class='controls__next' src="icons/Next.svg" alt="Next">
-                            <input type="range" min="0" max="100" class="controls__slider">
-                            <span class="controls__volume"></span>
+                    </template>
+                </div>
+            </div>
+            <div id="video" class="hidden">
+                <div class="video-container">
+                    <div class="video__player">
+                        <video id="video-1" class="video" preload="auto" muted autoplay></video>
+                        <canvas class="canvas" width="350" height="50"></canvas>
+                        <div class="player__panel">
+                            Контраст:
+                            <input type="range" min='1' max='100' value='10' class="input__contrast">
+                            Яркость:
+                            <input type="range" min='1' max='100' value='10' class="input__brightness">
+                            <button class="player__button">Все видео</button>
                         </div>
                     </div>
-                </template>
-            </div>
-        </main>
-        <main id="video" class="hidden">
-            <div class="video-container">
-                <div class="video__player">
-                    <video id="video-1" class="video" preload="auto" muted autoplay></video>
-                    <canvas class="canvas" width="350" height="50"></canvas>
-                    <div class="player__panel">
-                        Контраст:
-                        <input type="range" min='1' max='100' value='10' class="input__contrast">
-                        Яркость:
-                        <input type="range" min='1' max='100' value='10' class="input__brightness">
-                        <button class="player__button">Все видео</button>
+                    <div class="video__player">
+                        <video id="video-2" class="video" preload="auto" muted autoplay></video>
+                        <canvas class="canvas" width="350" height="50"></canvas>
+                        <div class="player__panel">
+                            Контраст:
+                            <input type="range" min='1' max='100' value='10' class="input__contrast">
+                            Яркость:
+                            <input type="range" min='1' max='100' value='10' class="input__brightness">
+                            <button class="player__button">Все видео</button>
+                        </div>
                     </div>
-                </div>
-                <div class="video__player">
-                    <video id="video-2" class="video" preload="auto" muted autoplay></video>
-                    <canvas class="canvas" width="350" height="50"></canvas>
-                    <div class="player__panel">
-                        Контраст:
-                        <input type="range" min='1' max='100' value='10' class="input__contrast">
-                        Яркость:
-                        <input type="range" min='1' max='100' value='10' class="input__brightness">
-                        <button class="player__button">Все видео</button>
+                    <div class="video__player">
+                        <video id="video-3" class="video" preload="auto" muted autoplay></video>
+                        <canvas class="canvas" width="350" height="50"></canvas>
+                        <div class="player__panel">
+                            Контраст:
+                            <input type="range" min='1' max='100' value='10' class="input__contrast">
+                            Яркость:
+                            <input type="range" min='1' max='100' value='10' class="input__brightness">
+                            <button class="player__button">Все видео</button>
+                        </div>
                     </div>
-                </div>
-                <div class="video__player">
-                    <video id="video-3" class="video" preload="auto" muted autoplay></video>
-                    <canvas class="canvas" width="350" height="50"></canvas>
-                    <div class="player__panel">
-                        Контраст:
-                        <input type="range" min='1' max='100' value='10' class="input__contrast">
-                        Яркость:
-                        <input type="range" min='1' max='100' value='10' class="input__brightness">
-                        <button class="player__button">Все видео</button>
-                    </div>
-                </div>
-                <div class="video__player">
-                    <video id="video-4" class="video" preload="auto" controls muted autoplay></video>
-                    <canvas class="canvas" width="350" height="50"></canvas>
-                    <div class="player__panel">
-                        Контраст:
-                        <input type="range" min='1' max='100' value='10' class="input__contrast">
-                        Яркость:
-                        <input type="range" min='1' max='100' value='10' class="input__brightness">
-                        <button class="player__button">Все видео</button>
+                    <div class="video__player">
+                        <video id="video-4" class="video" preload="auto" controls muted autoplay></video>
+                        <canvas class="canvas" width="350" height="50"></canvas>
+                        <div class="player__panel">
+                            Контраст:
+                            <input type="range" min='1' max='100' value='10' class="input__contrast">
+                            Яркость:
+                            <input type="range" min='1' max='100' value='10' class="input__brightness">
+                            <button class="player__button">Все видео</button>
+                        </div>
                     </div>
                 </div>
             </div>
