--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             <div class="video-container hidden">
                 <div class="video__player">
-                    <video id="video-1" class="video"  muted autoplay></video>
+                    <video class="video"  muted autoplay></video>
                     <div class="player__panel hidden">
                         <canvas class="canvas" width="350" height="50"></canvas>
                         <div class="player__settings">
@@ -117,7 +117,7 @@
                     </div>
                 </div>
                 <div class="video__player">
-                    <video id="video-2" class="video"  muted autoplay></video>
+                    <video class="video"  muted autoplay></video>
                     <div class="player__panel hidden">
                         <canvas class="canvas" width="350" height="50"></canvas>
                         <div class="player__settings">
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="video__player">
-                    <video id="video-3" class="video"  muted autoplay></video>
+                    <video class="video"  muted autoplay></video>
                     <div class="player__panel hidden">
                         <canvas class="canvas" width="350" height="50"></canvas>
                         <div class="player__settings">
@@ -143,7 +143,7 @@
                     </div>
                 </div>
                 <div class="video__player">
-                    <video id="video-4" class="video" muted autoplay></video>
+                    <video class="video" muted autoplay></video>
                     <div class="player__panel hidden">
                         <canvas class="canvas" width="350" height="50"></canvas>
                         <div class="player__settings">
