обновил лицензию, добавил иконку настроек

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                             <input type="range" min='1' max='100' value='10' class="input__brightness">
                         </div>
                         <button class="player__button" title="Все видео">Все видео</button>
+                        <img class='settings_icon' src="icons/settings.svg">
                     </div>
                 </div>
                 <div class="video__player">
@@ -127,6 +128,7 @@
                             <input type="range" min='1' max='100' value='10' class="input__brightness">
                         </div>
                         <button class="player__button" title="Все видео">Все видео</button>
+                        <img class='settings_icon' src="icons/settings.svg">
                     </div>
                 </div>
                 <div class="video__player">
@@ -140,6 +142,7 @@
                             <input type="range" min='1' max='100' value='10' class="input__brightness">
                         </div>
                         <button class="player__button" title="Все видео">Все видео</button>
+                        <img class='settings_icon' src="icons/settings.svg">
                     </div>
                 </div>
                 <div class="video__player">
@@ -153,6 +156,7 @@
                             <input type="range" min='1' max='100' value='10' class="input__brightness">
                         </div>
                         <button class="player__button" title="Все видео">Все видео</button>
+                        <img class='settings_icon' src="icons/settings.svg">
                     </div>
                 </div>
             </div>
