добавил уровень освещения

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             </div>
             <div class="video-container hidden">
                 <div class="video__player">
+                    <p class="video__light-value"></p>
                     <video class="video"  muted autoplay></video>
                     <div class="player__panel hidden">
                         <canvas class="canvas" width="350" height="50"></canvas>
@@ -114,10 +115,11 @@
                             <input type="range" min='1' max='100' value='10' class="input__brightness">
                         </div>
                         <button class="player__button" title="Все видео">Все видео</button>
-                        <img class='settings_icon' src="icons/settings.svg">
+                        <img class='settings_icon' src="icons/settings.svg" alt="Шестеренка">
                     </div>
                 </div>
                 <div class="video__player">
+                    <p class="video__light-value"></p>
                     <video class="video"  muted autoplay></video>
                     <div class="player__panel hidden">
                         <canvas class="canvas" width="350" height="50"></canvas>
@@ -128,10 +130,11 @@
                             <input type="range" min='1' max='100' value='10' class="input__brightness">
                         </div>
                         <button class="player__button" title="Все видео">Все видео</button>
-                        <img class='settings_icon' src="icons/settings.svg">
+                        <img class='settings_icon' src="icons/settings.svg" alt="Шестеренка">
                     </div>
                 </div>
                 <div class="video__player">
+                    <p class="video__light-value"></p>
                     <video class="video"  muted autoplay></video>
                     <div class="player__panel hidden">
                         <canvas class="canvas" width="350" height="50"></canvas>
@@ -142,10 +145,11 @@
                             <input type="range" min='1' max='100' value='10' class="input__brightness">
                         </div>
                         <button class="player__button" title="Все видео">Все видео</button>
-                        <img class='settings_icon' src="icons/settings.svg">
+                        <img class='settings_icon' src="icons/settings.svg" alt="Шестеренка">
                     </div>
                 </div>
                 <div class="video__player">
+                    <p class="video__light-value"></p>
                     <video class="video" muted autoplay></video>
                     <div class="player__panel hidden">
                         <canvas class="canvas" width="350" height="50"></canvas>
@@ -156,7 +160,7 @@
                             <input type="range" min='1' max='100' value='10' class="input__brightness">
                         </div>
                         <button class="player__button" title="Все видео">Все видео</button>
-                        <img class='settings_icon' src="icons/settings.svg">
+                        <img class='settings_icon' src="icons/settings.svg" alt="Шестеренка">
                     </div>
                 </div>
             </div>
