--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="styles/video.css">
         <script src="js/utils.js" defer></script>
         <script src="js/js.js" defer></script>
-        <script src="https://code.jquery.com/pep/0.4.3/pep.js" defer></script>
+        <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/hls.js@latest" defer></script>
         <script src="js/motionCapture.js" defer></script>
         <script src="js/video.js" defer></script>
@@ -71,8 +71,8 @@
                             </div>
                             <div class="card__description">
                                 <div class="card__additions">
-                                    <div class="additions__top"></div>
-                                    <img class='additions__image' touch-action="none" src="" alt="">
+                                    <div class="additions__top" touch-action="none"></div>
+                                    <img class='additions__image' src="" alt="">
                                     <div class="additions__temperature"></div>
                                     <div class="additions__humidity"></div>
                                 </div>
