--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <title>React App</title>
+    <title>Yandex SmartHome</title>
   </head>
   <body>
-      <header></header>
-      <main></main>
-      <footer></footer>
+      <div class="body"></div>
   </body>
 </html>
